# bgfx_template

./: .gitignore  .gitmodules  README.md  build.bat  build_cmake.bat  gmon.out
_build/make/: CMakeLists.txt
src/core/: main.c
